--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,7 +55,7 @@ const sortedPosts = posts
     <ul class="horizontal-scroll">
       <li class="project-bg bg-1">
         <a class="project" href="https://github.com/MartinRybergLaude/Solsken">
-          <img src="/images/solsken.webp" height={80} width={80} alt="" />
+          <img src="/images/solsken.svg" height={80} width={80} alt="" />
           <h3>Solsken</h3>
         </a>
       </li>
@@ -64,13 +64,13 @@ const sortedPosts = posts
           class="project"
           href="https://github.com/MartinRybergLaude/GameSquad"
         >
-          <img src="/images/gamesquad.webp" height={80} width={80} alt="" />
+          <img src="/images/gamesquad.svg" height={80} width={80} alt="" />
           <h3>GameSquad</h3>
         </a>
       </li>
       <li class="project-bg bg-3">
         <a class="project" href="https://github.com/MartinRybergLaude/Avodoro">
-          <img src="/images/avodoro.webp" height={80} width={80} alt="" />
+          <img src="/images/avodoro.svg" height={80} width={80} alt="" />
           <h3>Avodoro</h3>
         </a>
       </li>
@@ -79,7 +79,7 @@ const sortedPosts = posts
           class="project"
           href="https://github.com/MartinRybergLaude/QuantumSnakeConsole"
         >
-          <img src="/images/quantum.webp" height={80} width={80} alt="" />
+          <img src="/images/quantum.svg" height={80} width={80} alt="" />
           <h3>Quantum Snake</h3>
         </a>
       </li>
