--- a/src/components/Parallax.module.css
+++ b/src/components/Parallax.module.css
@@ -6,7 +6,7 @@
     position: absolute;
     bottom: 120%;
     right: 0;
-    aspect-ratio: 3.2 / 4;
+    aspect-ratio: 0.75;
     overflow: hidden;
     border-radius: var(--radius);
     isolation: isolate;
@@ -22,15 +22,15 @@
 }
 
 .bg {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .bg img {
   margin: -64px 0 0 0;
-  width: calc(100% + 128px);
+  width: 100%;
   height: auto;
-  aspect-ratio: 3.2 / 4;
+  aspect-ratio: 0.5;
   max-height: none;
   max-width: none;
 }
