--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -8,7 +8,7 @@ import Page from "../layouts/Page.astro";
   <p>Here are some of my projects with related information.</p>
   <ul>
     <li>
-      <img src="/images/solsken.webp" width={128} height={128} alt="" />
+      <img src="/images/solsken.svg" width={128} height={128} alt="" />
       <div>
         <h2>Solsken</h2>
         <p>Accessible and detailed weather globally.</p>
@@ -30,7 +30,7 @@ import Page from "../layouts/Page.astro";
       </div>
     </li>
     <li>
-      <img src="/images/gamesquad.webp" width={128} height={128} alt="" />
+      <img src="/images/gamesquad.svg" width={128} height={128} alt="" />
       <div>
         <h2>GameSquad</h2>
         <p>Squad up and vote for what games to play.</p>
@@ -52,7 +52,7 @@ import Page from "../layouts/Page.astro";
       </div>
     </li>
     <li>
-      <img src="/images/avodoro.webp" width={128} height={128} alt="" />
+      <img src="/images/avodoro.svg" width={128} height={128} alt="" />
       <div>
         <h2>Avodoro</h2>
         <p>Lightweight offline-ready pomodoro timer.</p>
@@ -72,7 +72,7 @@ import Page from "../layouts/Page.astro";
       </div>
     </li>
     <li>
-      <img src="/images/quantum.webp" width={128} height={128} alt="" />
+      <img src="/images/quantum.svg" width={128} height={128} alt="" />
       <div>
         <h2>Quantum Snake</h2>
         <p>Outrun theme, enemy A* powered snake, all running in the console.</p>
