--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -6,7 +6,27 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
 const { title } = Astro.props;
 ---
 
-<!DOCTYPE html>
+<script>
+  import Swup from "swup";
+  import SwupA11yPlugin from "@swup/a11y-plugin";
+  import SwupHeadPlugin from "@swup/head-plugin";
+  import SwupSlideTheme from "@swup/slide-theme";
+  import SwupPreloadPlugin from "@swup/preload-plugin";
+  import SwupProgressPlugin from "@swup/progress-plugin";
+  import SwupScrollPlugin from "@swup/scroll-plugin";
+
+  const swup = new Swup({
+    plugins: [
+      new SwupA11yPlugin(),
+      new SwupHeadPlugin(),
+      new SwupSlideTheme(),
+      new SwupPreloadPlugin(),
+      new SwupProgressPlugin(),
+      new SwupScrollPlugin(),
+    ],
+  });
+</script>
+
 <html lang="en">
   <head>
     <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
@@ -14,7 +34,7 @@ const { title } = Astro.props;
   <body class="page">
     <div class="page-container">
       <Header client:load activeTag={title} />
-      <main class="wrapper">
+      <main id="swup" class="wrapper">
         <slot />
       </main>
     </div>
