fix: safari mobile focus box on main content

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -272,6 +272,7 @@ blockquote p {
 }
 .wrapper:focus {
   outline: none;
+  -webkit-appearance: none;
 }
 .fw-margin {
   margin-inline: var(--padding);
