fix: dynamic meta tags for blog posts

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -16,7 +16,7 @@ const {
 } = Astro.props;
 ---
 
-<Page title="Blog">
+<Page navTitle="Blog" title={title} description={description}>
   <address class="author">
     By <a rel="author" href="/about">{author}</a>
   </address>
