--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,7 +2,7 @@
 import Page from "../layouts/Page.astro";
 ---
 
-<Page title="About">
+<Page navTitle="About">
   <h1>About me</h1>
   <p>Greetings! I'm a Swedish frontend developer based in Stockholm.</p>
   <section>
