--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -8,7 +8,7 @@ const posts = (await getCollection("blog")).sort(
 );
 ---
 
-<Page title="Blog">
+<Page navTitle="Blog">
   <h1>Blog</h1>
   <ul>
     {
