--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -3,7 +3,7 @@ import Icon from "astro-icon";
 import Page from "../layouts/Page.astro";
 ---
 
-<Page title="Contact">
+<Page navTitle="Contact">
   <h1>Contact me</h1>
   <p>
     I'm always available at
@@ -16,17 +16,20 @@ import Page from "../layouts/Page.astro";
   <ul>
     <li>
       <a class="arrow-link" href="https://github.com/MartinRybergLaude"
-        >Github<Icon name="chain" /></a>
+        >Github<Icon name="chain" /></a
+      >
     </li>
     <li>
       <a
         class="arrow-link"
         href="https://www.linkedin.com/in/martinryberglaude/"
-        >Linkedin<Icon name="chain" /></a>
+        >Linkedin<Icon name="chain" /></a
+      >
     </li>
     <li>
       <a rel="me" class="arrow-link" href="https://mastodon.green/@mrlaude"
-        >Mastodon<Icon name="chain" /></a>
+        >Mastodon<Icon name="chain" /></a
+      >
     </li>
   </ul>
   <p>I look forward to hearing from you!</p>
