--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ const sortedPosts = posts
   .slice(0, 3);
 ---
 
-<Page title="Home">
+<Page navTitle="Home">
   <h1>Martin Ryberg Laude</h1>
   <section class="cta fw">
     <div class="cta-content">
