--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -3,7 +3,7 @@ import Icon from "astro-icon";
 import Page from "../layouts/Page.astro";
 ---
 
-<Page title="Projects">
+<Page navTitle="Projects">
   <h1>My projects</h1>
   <p>Here are some of my projects with related information.</p>
   <ul>
