--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -3,7 +3,7 @@ import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Header";
 import Footer from "../components/Footer.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
-const { title } = Astro.props;
+const { navTitle, title, description } = Astro.props;
 ---
 
 <script>
@@ -29,11 +29,14 @@ const { title } = Astro.props;
 
 <html lang="en">
   <head>
-    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+    <BaseHead
+      title={title || SITE_TITLE}
+      description={description || SITE_DESCRIPTION}
+    />
   </head>
   <body class="page">
     <div class="page-container">
-      <Header client:load activeTag={title} />
+      <Header client:load activeTag={navTitle} />
       <main id="swup" class="wrapper">
         <slot />
       </main>
