--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,19 +1,31 @@
 ---
+import type Post from "../interfaces/post";
 import Page from "./Page.astro";
+import { Marked } from "marked";
+import { markedHighlight } from "marked-highlight";
+import hljs from "highlight.js";
+import sanitizeHtml from "sanitize-html";
 
 export interface Props {
-  content: {
-    title: string;
-    description: string;
-    pubDate: string;
-    updatedDate?: string;
-    author: string;
-  };
+  post: Post;
 }
 
-const {
-  content: { title, description, pubDate, updatedDate, author },
-} = Astro.props;
+const { post } = Astro.props;
+const { attributes } = post;
+const { title, description, author, pubDate, updateDate, content } = attributes;
+
+const marked = new Marked(
+  { mangle: false },
+  markedHighlight({
+    langPrefix: "hljs language-",
+    highlight(code, lang) {
+      const language = hljs.getLanguage(lang) ? lang : "plaintext";
+      return hljs.highlight(code, { language }).value;
+    },
+  })
+);
+const html = marked.parse(content);
+sanitizeHtml(html);
 ---
 
 <Page navTitle="Blog" title={title} description={description}>
@@ -32,11 +44,11 @@ const {
       }
     </time>
     {
-      updatedDate && (
+      updateDate && (
         <p class="updatedDate">
           Updated:
           <time>
-            {new Date(updatedDate).toLocaleString("en-US", {
+            {new Date(updateDate).toLocaleString("en-US", {
               month: "long",
               day: "numeric",
               year: "numeric",
@@ -47,5 +59,5 @@ const {
     }
   </div>
   <p class="desc">{description}</p>
-  <slot />
+  <article set:html={html} />
 </Page>
