--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,12 +2,21 @@
 import Page from "../layouts/Page.astro";
 import { Icon } from "astro-icon";
 import { Parallax } from "../components/Parallax";
-import { getCollection } from "astro:content";
+import fetchApi from "../lib/strapi";
+import type Post from "../interfaces/post";
 
-const posts = await await getCollection("blog");
-const sortedPosts = posts
-  .sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf())
-  .slice(0, 3);
+const posts = await fetchApi<Post[]>({
+  endpoint: "devposts",
+  wrappedByKey: "data",
+});
+posts
+  .sort((a, b) => {
+    return (
+      new Date(b.attributes.pubDate).getTime() -
+      new Date(a.attributes.pubDate).getTime()
+    );
+  })
+  .splice(3);
 ---
 
 <Page navTitle="Home">
@@ -27,13 +36,15 @@ const sortedPosts = posts
     <h2>Latest posts</h2>
     <ul>
       {
-        sortedPosts.map((post) => (
+        posts.map((post) => (
           <li>
-            <a href={`/blog/${post.slug}`}>
+            <a href={`/blog/${post.attributes.slug}`}>
               <article class="post">
-                <h3>{post.data.title}</h3>
-                <time datetime={post.data.pubDate.toISOString()}>
-                  {new Date(post.data.pubDate).toLocaleString("en-US", {
+                <h3>{post.attributes.title}</h3>
+                <time
+                  datetime={new Date(post.attributes.pubDate).toISOString()}
+                >
+                  {new Date(post.attributes.pubDate).toLocaleString("en-US", {
                     month: "long",
                     day: "numeric",
                     year: "numeric",
