--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -6,6 +6,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 16px;
 }
 
 .header li {
@@ -16,9 +17,17 @@
   cursor: pointer;
 }
 
+.nav {
+  width: 100%;
+}
+
+.wideNav {
+  width: 528px;
+}
+
 .header ul {
   list-style-type: none;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
   margin: 0;
   padding: 0;
@@ -35,6 +44,8 @@
   flex-direction: column;
 }
 .desktopUl {
+  max-width: 600px;
+  margin: 0 auto;
   list-style-type: none;
   display: none;
   justify-content: space-evenly;
@@ -48,6 +59,13 @@
   font-weight: 700;
   font-size: 18px;
   transition: none;
+}
+
+.line {
+  flex-grow: 1;
+  height: 2px;
+  background: var(--color-text-3);
+  animate: slideIn 0.3 ease-in-out forwards;
 }
 
 .link:hover {
@@ -108,5 +126,14 @@
   .rightLink svg {
     width: 28px;
     height: 28px;
+  }
+}
+
+@keyframes slideIn {
+  from {
+    width: 0;
+  }
+  to {
+    width: auto;
   }
 }
