--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -3,7 +3,7 @@ import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Header";
 import Footer from "../components/Footer.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
-const { navTitle, title, description } = Astro.props;
+const { navTitle, title, description, wide } = Astro.props;
 ---
 
 <script>
