feat: add life blog

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -27,7 +27,7 @@
 
 .header ul {
   list-style-type: none;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   margin: 0;
   padding: 0;
