--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,8 +1,10 @@
 ---
+import Wideness from "../components/Wideness";
 import Page from "../layouts/Page.astro";
 ---
 
 <Page>
+  <Wideness client:load />
   <h1>404</h1>
   <p>There's nothing here I'm afraid!</p>
 </Page>
