--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,9 +1,11 @@
 ---
 import Icon from "astro-icon";
 import Page from "../layouts/Page.astro";
+import Wideness from "../components/Wideness";
 ---
 
 <Page navTitle="Contact">
+  <Wideness client:load />
   <h1>Contact me</h1>
   <p>
     I'm always available at
