--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -163,17 +163,15 @@ img + p em {
   display: block;
   padding: 0;
   margin-top: -42px;
-}
-img + em {
+}img + em {
   display: block;
   padding: 0;
   margin-top: -24px;
 }
 pre {
   margin: 32px 0 32px 0;
-  padding: var(--padding);
   grid-column: full !important;
-  border-radius: 6px;
+  overflow-x: scroll;
 }
 pre + p {
   margin: 0
@@ -184,6 +182,7 @@ pre + p em {
   margin-top: -24px;
 }
 code {
+  overflow-x: hidden;
   font-size: 14px;
   font-family: var(--font-mono);
 }
@@ -192,13 +191,10 @@ blockquote {
   width: 100%;
   margin: 0;
   color: var(--color-text-4);
-  padding: var(--padding);
   border-left: 4px solid var(--color-1);
   font-size: 16px;
   margin-top: 32px;
   background: rgba(var(--color-1-rgb), 0.1);
-  border-top-right-radius: 6px;
-  border-bottom-right-radius: 6px;
 }
 
 blockquote > :last-child {
@@ -321,13 +317,6 @@ blockquote p {
   }
   .post-title {
     font-size: 48px;
-  }
-  pre {
-    border-radius: 16px;
-  }
-  blockquote {
-    border-top-right-radius: 16px;
-    border-bottom-right-radius: 16px;
   }
   code {
     font-size: 16px;
