feat: redesign projects section

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -39,7 +39,7 @@
 		--color-text-3: #a8a896;
 		--color-text-4: #7e7e6f;
 		--color-text-cloud: #c7f0ea;
-		--color-bg-light: #30302b;
+		--color-bg-light: #252626;
 		--color-bg-dark: #292825;
 		--color-bg: #10100e;
 	}
