--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -24,10 +24,9 @@ import Page from "../layouts/Page.astro";
     <h2>Experience</h2>
     <p>
       I've worked as a web developer during summers dating back to 2018, and
-      have been working part-time as a Frontend Developer at <a
-        href="https://www.5monkeys.se">5 Monkeys Agency</a
-      >
-      since February 2022.
+      have been working part-time as a Frontend Developer during my university
+      studies. I'm currently working at <a href="https://www.atlar.com">Atlar</a
+      >.
     </p>
     <p>
       During this time I've come to work with a variety of different projects of
