--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,12 +1,23 @@
 .header {
   padding: 0 16px;
-  background: var(--color-bg);
-  width: 100%;
+  margin-inline: 12px;  
+  width: 776px;
   height: 56px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 16px;
+  z-index: 10;
+  position: fixed;
+  background: rgb(var(--color-bg-rgb) / 0.5);
+  -webkit-backdrop-filter: blur(16px);
+  backdrop-filter: blur(16px);
+  border-radius: 8px;
+}
+
+.headerWide {
+  margin-inline: 8px;  
+  width: 948px;
 }
 
 .header li {
@@ -18,7 +29,7 @@
 }
 
 .nav {
-  width: 100%;
+  width: 528px;  
 }
 
 .wideNav {
@@ -42,6 +53,7 @@
   top: 0;
   left: 0;
   flex-direction: column;
+  justify-content: space-evenly;
 }
 .desktopUl {
   max-width: 600px;
@@ -55,7 +67,7 @@
   border-radius: 6px;
   padding: 8px 12px;
   text-decoration: none;
-  color: var(--color-text-4);
+  color: var(--color-text-3);
   font-weight: 700;
   font-size: 18px;
   transition: none;
