--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -26,6 +26,11 @@ const { title, description } = Astro.props;
 <title>{title}</title>
 <meta name="title" content={title} />
 <meta name="description" content={description} />
+<meta
+  name="theme-color"
+  content="#10100E"
+  media="(prefers-color-scheme: dark)"
+/>
 <meta name="theme-color" content="#f5f4f0" />
 
 <!-- Open Graph / Facebook -->
