--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,7 +1,7 @@
 .header {
   padding: 0 16px;
-  margin-inline: 12px;  
-  width: 776px;
+  width: 100%;
+  max-width: 776px;
   height: 56px;
   display: flex;
   justify-content: space-between;
@@ -9,15 +9,15 @@
   gap: 16px;
   z-index: 10;
   position: fixed;
-  background: rgb(var(--color-bg-rgb) / 0.5);
+  background: rgb(var(--color-bg-rgb) / 0.2);
   -webkit-backdrop-filter: blur(16px);
   backdrop-filter: blur(16px);
-  border-radius: 8px;
 }
 
 .headerWide {
   margin-inline: 8px;  
-  width: 948px;
+  width: 100%;
+  max-width: 948px;
 }
 
 .header li {
@@ -74,7 +74,9 @@
 }
 
 .line {
-  flex-grow: 1;
+  display: none;
+  width: 100%;
+  flex-shrink: 1;
   height: 2px;
   background: var(--color-text-3);
   animate: slideIn 0.3 ease-in-out forwards;
@@ -114,12 +116,17 @@
 }
 
 @media (min-width: 600px) {
+  .line {
+    display: flex;
+  }
   .mobileUl {
     display: none;
   }
   .header {
     padding: 0 36px;
-    margin-top: 8px;
+    margin-inline: 12px;
+    border-bottom-left-radius: 6px;
+    border-bottom-right-radius: 6px;
   }
   .desktopUl {
     display: flex;
