feat: add ultrawider to featured projects and projects page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -86,15 +86,16 @@ posts
         />
       </a>
       <div class="double-cards">
-        <a
-          class="project project-center"
-          href="https://github.com/MartinRybergLaude/quantum-snake-console"
-        >
+        <a class="project project-center" href="/ultrawider">
           <div>
-            <h3>quantum-snake</h3>
-            <h4>Beat the algorithm.</h4>
+            <h3>Ultrawider</h3>
+            <h4>Black bars? Gone.</h4>
           </div>
-          <img class="avodoro-img" src="/images/quantum.svg" alt="" />
+          <img
+            class="avodoro-img"
+            src="/images/ultrawider/icon-256.png"
+            alt=""
+          />
         </a>
         <a
           class="project project-center"
