feat: add app store link for ultrawider

--- a/src/pages/ultrawider.astro
+++ b/src/pages/ultrawider.astro
@@ -25,7 +25,14 @@ import Wideness from "../components/Wideness";
       Ultrawider is a Safari extension that makes Youtube better for ultrawide
       displays.
     </p>
-    <button> Download Ultrawider</button>
+    <a
+      href="https://apps.apple.com/se/app/ultrawider/id6473668797?l=en-GB&mt=12"
+    >
+      <img
+        src="/images/ultrawider/mac_app_store.svg"
+        alt="download on the mac app store"
+      />
+    </a>
     <div class="break"></div>
     <h2>Simply press the widen button when watching a 21:9 video.</h2>
     <img src="/images/ultrawider/mockup3.png" alt="widen button" />
@@ -61,19 +68,7 @@ import Wideness from "../components/Wideness";
     font-size: 20px;
     text-align: center;
   }
-  button {
-    margin-top: 32px;
-    border-radius: 100px;
-    background-color: #e3712f;
-    border: none;
-    color: white;
-    padding: 14px 20px 16px 20px;
-    font-size: 18px;
-    cursor: pointer;
-  }
-  button:hover {
-    opacity: 0.8;
-  }
+
   .break {
     margin: 32px 0;
     height: 2px;
