--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -47,7 +47,7 @@
   display: flex;
   z-index: 10;
   background-color: var(--color-bg);
-  height: 100%;
+  height: 100vh;
   width: 100%;
   position: fixed;
   top: 0;
