feat: minor design changes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -88,7 +88,7 @@ posts
       <div class="double-cards">
         <a class="project project-center" href="/ultrawider">
           <div>
-            <h3>Ultrawider</h3>
+            <h3>ultrawider</h3>
             <h4>Black bars? Gone.</h4>
           </div>
           <img
@@ -131,7 +131,7 @@ posts
       display: inline-block;
       word-spacing: 100vw;
       font-family: var(--font-serif);
-      font-weight: 300;
+      font-weight: 200;
       animation: fadein 600ms;
       position: relative;
     }
@@ -217,6 +217,7 @@ posts
       height: 340px;
       padding: 32px;
       background: var(--color-bg-light);
+      border: 1px solid var(--color-bg-dark);
       border-radius: var(--radius);
       position: relative;
       overflow: hidden;
