--- a/public/styles/fonts.css
+++ b/public/styles/fonts.css
@@ -25,6 +25,14 @@
 @font-face {
   font-family: "Butler";
   src: url(/fonts/Butler-UltraLight.woff2) format(woff2);
+  font-weight: 200;
+  font-display: swap;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Butler";
+  src: url(/fonts/Butler.woff2) format(woff2);
+  font-weight: 400;
   font-display: swap;
   font-style: normal;
 }
